# TafelVoetbal

./: .env  .gitignore  README.md  pyproject.toml  setup.cfg
firmware/Bounce/: Bounce.ino
firmware/nema30000/: nema30000.ino  send_commands.py
firmware/nema30000/tafelvoetbal/: lib64  pyvenv.cfg
src/: main.py
src/communication/: main.py  mock_serial.py  serial_connection.py
src/communication/commands/: calibrate_command.py  commands.py  rotate_command.py  translate_command.py
src/model/: game_state.py
src/sensing/: aruco.py  frame_analysis.py  mock_sensor.py  picamera.py  sensor.py  video_sensor.py  vision.py
src/strategy/: follow_strategy.py  follow_x_strategy.py  manual_input_strategy.py  ping_pong_strategy.py  strategy.py
src/ui/: input_window.py  slider.py
src/vision/: vision.py
tests/: serialize_test.py
